Сделала тесты и их скриншоты

--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -68,6 +68,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
         padding-bottom: 20px !important;
       }
 
+      .mobile-content-p0pic {
+        padding-right: 8px !important;
+        border-radius: 5px 5px 0px 0px !important;
+      }
+
       .mobile-content-p0w {
         padding-right: 16px !important;
       }
@@ -200,7 +205,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                             <tr>
                               <td align="center" style="padding:0;Margin:0;padding-top:10px;">
-                                <h2 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:28px;color:#0B379B;">
+                                <h2 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#0B379B;">
                                   <b>Хотите научиться <br>
                                   web-разработке?</b></h2>
                               </td>
@@ -223,60 +228,77 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
 
-            <!--Шапка с текстом и картинкой справа-->
-            <table bgcolor="#ffffff"  align="center" cellpadding="0" cellspacing="0" width="100%"
-            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px; padding-left: 8px; padding-right: 8px;">
+            
+
+            <!--Благодарим за регистрацию-->
+            <table width="600" cellspacing="0" cellpadding="0" border="0">
               <tr>
-                <td align="left" bgcolor="#FF4B33" class="content-left" style="padding:0;Margin:0;background-color:#FF4B33; border-radius: 5px;">
-                  <!--[if mso]><table style="width:600px" cellpadding="0"
+                <td align="left" bgcolor="#FFFFFF" style="padding:0;Margin:0;background-color:#FFFFFF;">
+                <!--[if mso]><table style="width:600px" cellpadding="0"
                     cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
-                  <table cellpadding="0" cellspacing="0" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
+                  <table cellpadding="0" cellspacing="0" class="content-left mobile-content-p0pic" align="left"
+                    style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+
                     <tr>
-                      <td align="center" style="padding:0;Margin:0;width:298px; ">
-                        <table cellpadding="0" cellspacing="0" width="100%"
-                          style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
-                            <tr>
-                              <td align="center" style="Margin:0;padding-bottom:0px;padding-left:25px;padding-right:25px;padding-top:16px;">
-                                <h1 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#FFFFFF;width:auto;">
-                                  <b>Июнь</b></h1>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:25px;padding-right:25px;padding-bottom:2px;">
-                                <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:96px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:111px;color:#FFFFFF;width:auto;">
-                                  <span style="font-size:96px;line-height:111px;">20</span></p>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td align="center" style="Margin:0;padding-bottom:16px;padding-left:25px;padding-right:25px;padding-top:0px;">
-                                <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:22px;color:#FFFFFF;width:auto;">
-                                  <b>17:00</b></p>
-                              </td>
-                            </tr>
-                            <!-- Кнопка -->
-                            <tr>
-                              <td align="center" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;">
-                                      <span  width="100%" style="border-style:solid;border-color:#2CB543;background:#FFB500;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
-                                        <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FFB500;border-width:8px 20px;display:inline-block;background:#FFB500;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:128px;text-align:center;">На&nbsp;вебинар</a>
-                                      </span>
-                              </td>
-                           </tr>
+                      <td align="center" bgcolor="#FFFFFF"
+                                style="padding-bottom: 0px; padding-top: 0px; padding-left: 8px; padding-right: 0px; ">
+
+                        <table cellpadding="0" cellspacing="0" border="0"
+                                  width="100%" align="center" bgcolor="#FFFFFF"
+                                  style="padding-top: 0px; padding-bottom: 0px; ">
+                                  <tr>
+
+                            <td align="left" class="content-left mobile-content-p0pic"
+                                        bgcolor="#FF4B33"  
+                                      style="padding: 0px; padding-top: 0px; border-radius: 5px 0px 0px 5px;  ">
+                                      <table table cellpadding="0" cellspacing="0" width="100%"  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                                        <!-- Заголовок новости -->
+                                        <tr>
+                                          <td align="center" style="Margin:0;padding-bottom:0px;padding-left:25px;padding-right:25px;padding-top:16px;">
+                                            <h1 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#FFFFFF;width:auto;"><b>Июнь</b></h1>
+                                          </td>
+                                        </tr>
+                                        <tr>
+                                          <td align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:25px;padding-right:25px;padding-bottom:2px;">
+                                            <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:96px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:111px;color:#FFFFFF;width:auto;"> <span style="font-size:96px;line-height:111px;">20</span>
+                                            </p>
+                                          </td>
+                                        </tr>
+                                        <tr>
+                                          <td align="center" style="Margin:0;padding-bottom:16px;padding-left:25px;padding-right:25px;padding-top:0px;">
+                                            <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#FFFFFF;width:auto;"> <b>17:00</b></p>
+                                          </td>
+                                        </tr>
+                                        <!--Кнопка.-->
+                                        <tr>
+                                          <td align="center" 
+                                            valign="bottom"
+                                            bgcolor="#FF4B33"
+                                            style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;" >
+                                            <span  width="100%" style="border-style:solid;border-color:#2CB543;background:#FFB500;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
+                                             
+                                              <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FFB500;border-width:8px 20px;display:inline-block;background:#FFB500;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:128px;text-align:center;">На&nbsp;вебинар</a>
+                                            </div>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </td>
+
+                          </tr>
                         </table>
                       </td>
                     </tr>
                   </table>
-                </td>
-                  <!--[if mso]></td></tr></table><![endif]-->
-                  <td align="left" bgcolor="#FFFFFF"  width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
                   <!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
-                  <table cellpadding="0" cellspacing="0" width="100%" align="right" class="content-right"  
-                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;width:auto;">
+                  <table cellpadding="0" cellspacing="0" class="content-right" align="right" class="content-right"
+                    style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;width:auto;">
                     <tr>
-                      <td align="left" width="100%"
-                        style="padding:0;Margin:0;width:352px;padding-top:15px;">
+                      <td align="left"
+                        style="padding:0;Margin:0;width:352px;padding-top:0px;">
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
-                            <td width="100%" align="center" style="padding:0;Margin:0;font-size:0px;"> <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/1ban.png" alt="CroodsSitting" style="display:block;border:0;outline:none;width:auto;text-decoration:none;-ms-interpolation-mode:bicubic">
+                            <td align="center" style="padding:0;Margin:0;font-size:0px; padding-right: 0px;">
+                               <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/1ban.png" alt="CroodsSitting" width="100%" height="286" style="display: block; border-radius: 15px;">
                             </td>
                           </tr>
                         </table>
@@ -289,34 +311,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             </table>
 
 
-            <!--Шапка с текстом и картинкой справа  БЛОК С КАРТИНКОЙ ДЛЯ АДАПТАЦИИ -->
-            <table bgcolor="#ffffff"  align="center" cellpadding="0" cellspacing="0" width="100%"
-            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;">
-              <tr>
-                <td align="left" bgcolor="#FF4B33" class="content-left" style="padding:0;Margin:0;background-color:#FFFFFF; border-radius: 15px;">
-                  <!--[if mso]><table style="width:600px" cellpadding="0"
-                    cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
-                  <table cellpadding="0" cellspacing="0" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
-                    <tr>
-                      <td align="center" style="padding:0;Margin:0;width:298px; ">
-                        <table cellpadding="0" cellspacing="0" width="100%"
-                          style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
-                            <!-- Кнопка -->
-                            <tr>
-                              <td width="100%" align="center" style="padding:0;Margin:0;font-size:0px;"> <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/1ban.png" alt="CroodsSitting" style="display:block;border:0;outline:none;width:auto;text-decoration:none;-ms-interpolation-mode:bicubic">
-                            </td>
-                           </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </td align="left" bgcolor="#FFFFFF"  width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
-                  <!--[if mso]></td></tr></table><![endif]-->
-                  <td align="left" bgcolor="#FFFFFF"  width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
-                  <!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
-                </td>
-              </tr>
-            </table>
+
 
 
 
@@ -329,11 +324,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             <!--Текст с рассказом "о нас"-->
             <table width="100%" cellspacing="0" cellpadding="0" border="0">
               <tr>
-                <td>
+                <td style="padding-top: 0px; padding-bottom: 0px; ">
                   <table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0"
                   style="mso-table-lspace:0pt;mso-table-rspace:0pt; border-spacing:0px; background-color:#0C379B; width:600px;">
                   <tr>
-                    <td>
+                    <td style="padding-top: 0px; padding-bottom: 40px; ">
                       <table align="center" width="100%" cellspacing="0" cellpadding="0" border="0">
                         <tr>
                           <td align="left" style="padding:0;Margin:0;padding-top:40px; padding-left:16px;padding-right:16px; color:#FFFFFF">
@@ -346,12 +341,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           </td>
                         </tr>
                       </table>
-                    </td>
-                  </tr>
-                  </table>
-                </td>
-              </tr>
-            </table>
 
               <!--Блок с планом вебинара-->
               <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
@@ -395,7 +384,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
               </table>
 
               <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
-                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 40px; padding-right: 0px;">
+                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                 <tr>
                   <td class="mobile-content-p0" width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 16px;">
@@ -409,9 +398,13 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 </tr>
               </table>
 
+            </td>
+          </tr>
+        </table>
+
             <!--Ведущий вебинара-->
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
-            bgcolor="#FFFFFF" style="padding-top: 40px; padding-bottom: 0px; padding-right: 0px;">
+            bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
               <tr>
                 <td align="center"
                 style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
@@ -419,7 +412,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                   bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                     <tr>
                       <td width="100%" align="center" align="top"
-                      style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                      style="padding-top: 40px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:24px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#141414;">
                           <b>Ведущий вебинара</b></p>
                       </td>
