--- a/1-invitation/index.min.html
+++ b/1-invitation/index.min.html
@@ -22,7 +22,7 @@
 </o:OfficeDocumentSettings>
 </xml>
 <![endif]-->
-<style type="text/css">@media only screen and (max-width:600px){ul li,ol li,a{font-size:14px!important;line-height:150%!important}.mobile-content-p0q{font-size:16px!important;line-height:19px!important}h2{font-size:28px!important;line-height:120%!important}h1{font-size:36px!important;line-height:120%!important}h3{font-size:24px!important;line-height:120%!important}h4{font-size:16px!important;line-height:120%!important}.mobile-content-p0{padding-bottom:20px!important}.mobile-content-p0w{padding-right:16px!important}.mobile-content-p0t{padding-right:16px!important;padding-left:16px!important;padding-bottom:16px!important}.mobile-content-p0x{padding-right:41px!important;padding-left:41px!important;width:206px!important}.button-border{display:block!important}a.button{font-size:20px!important;display:block!important;border-width:10px 0 10px 0!important}.content-left,.content-right{width:100%!important}.content table,.content{width:100%!important;max-width:600px!important}}.adaptive-img{width:100%!important;height:auto!important}.button{mso-style-priority:100!important;text-decoration:none!important}#outlook a{padding:0}.container{max-width:600px;width:100%}table.not-adaptive{width:auto!important}table.social{display:inline-block!important}table.social td{display:inline-block!important}</style>
+<style type="text/css">@media only screen and (max-width:600px){ul li,ol li,a{font-size:14px!important;line-height:150%!important}.mobile-content-p0q{font-size:16px!important;line-height:19px!important}h2{font-size:28px!important;line-height:120%!important}h1{font-size:36px!important;line-height:120%!important}h3{font-size:24px!important;line-height:120%!important}h4{font-size:16px!important;line-height:120%!important}.mobile-content-p0{padding-bottom:20px!important}.mobile-content-p0pic{padding-right:8px!important;border-radius:5px 5px 0 0!important}.mobile-content-p0w{padding-right:16px!important}.mobile-content-p0t{padding-right:16px!important;padding-left:16px!important;padding-bottom:16px!important}.mobile-content-p0x{padding-right:41px!important;padding-left:41px!important;width:206px!important}.button-border{display:block!important}a.button{font-size:20px!important;display:block!important;border-width:10px 0 10px 0!important}.content-left,.content-right{width:100%!important}.content table,.content{width:100%!important;max-width:600px!important}}.adaptive-img{width:100%!important;height:auto!important}.button{mso-style-priority:100!important;text-decoration:none!important}#outlook a{padding:0}.container{max-width:600px;width:100%}table.not-adaptive{width:auto!important}table.social{display:inline-block!important}table.social td{display:inline-block!important}</style>
 </head>
 <body style="width:100%; padding:0; Margin:0; font-family:'trebuchet ms', tahoma, sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
 <div style="background-color:#F6F6F6;">
@@ -71,7 +71,7 @@
 <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tr>
 <td align="center" style="padding:0;Margin:0;padding-top:10px;">
-<h2 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:28px;color:#0B379B;">
+<h2 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#0B379B;">
 <b>Хотите научиться <br>
 web-разработке?</b></h2>
 </td>
@@ -91,39 +91,41 @@ web-разработке?</b></h2>
 </td>
 </tr>
 </table>
-<!--Шапка с текстом и картинкой справа-->
-<table bgcolor="#ffffff" align="center" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px; padding-left: 8px; padding-right: 8px;">
+<!--Благодарим за регистрацию-->
+<table width="600" cellspacing="0" cellpadding="0" border="0">
 <tr>
-<td align="left" bgcolor="#FF4B33" class="content-left" style="padding:0;Margin:0;background-color:#FF4B33; border-radius: 5px;">
+<td align="left" bgcolor="#FFFFFF" style="padding:0;Margin:0;background-color:#FFFFFF;">
 <!--[if mso]><table style="width:600px" cellpadding="0" cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
+<table cellpadding="0" cellspacing="0" class="content-left mobile-content-p0pic" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tr>
-<td align="center" style="padding:0;Margin:0;width:298px; ">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
+<td align="center" bgcolor="#FFFFFF" style="padding-bottom: 0px; padding-top: 0px; padding-left: 8px; padding-right: 0px; ">
+<table cellpadding="0" cellspacing="0" border="0" width="100%" align="center" bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; ">
+<tr>
+<td align="left" class="content-left mobile-content-p0pic" bgcolor="#FF4B33" style="padding: 0px; padding-top: 0px; border-radius: 5px 0px 0px 5px;  ">
+<table table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<!-- Заголовок новости -->
 <tr>
 <td align="center" style="Margin:0;padding-bottom:0px;padding-left:25px;padding-right:25px;padding-top:16px;">
-<h1 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#FFFFFF;width:auto;">
-<b>Июнь</b></h1>
+<h1 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#FFFFFF;width:auto;"><b>Июнь</b></h1>
 </td>
 </tr>
 <tr>
 <td align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:25px;padding-right:25px;padding-bottom:2px;">
-<p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:96px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:111px;color:#FFFFFF;width:auto;">
-<span style="font-size:96px;line-height:111px;">20</span></p>
+<p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:96px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:111px;color:#FFFFFF;width:auto;"> <span style="font-size:96px;line-height:111px;">20</span>
+</p>
 </td>
 </tr>
 <tr>
 <td align="center" style="Margin:0;padding-bottom:16px;padding-left:25px;padding-right:25px;padding-top:0px;">
-<p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:22px;color:#FFFFFF;width:auto;">
-<b>17:00</b></p>
+<p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:36px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:42px;color:#FFFFFF;width:auto;"> <b>17:00</b></p>
 </td>
 </tr>
-<!-- Кнопка -->
+<!--Кнопка.-->
 <tr>
-<td align="center" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;">
+<td align="center" valign="bottom" bgcolor="#FF4B33" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;">
 <span width="100%" style="border-style:solid;border-color:#2CB543;background:#FFB500;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
 <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FFB500;border-width:8px 20px;display:inline-block;background:#FFB500;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:128px;text-align:center;">На&nbsp;вебинар</a>
-</span>
+</div>
 </td>
 </tr>
 </table>
@@ -131,15 +133,16 @@ web-разработке?</b></h2>
 </tr>
 </table>
 </td>
-<!--[if mso]></td></tr></table><![endif]-->
-<td align="left" bgcolor="#FFFFFF" width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
+</tr>
+</table>
 <!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" width="100%" align="right" class="content-right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;width:auto;">
+<table cellpadding="0" cellspacing="0" class="content-right" align="right" class="content-right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;width:auto;">
 <tr>
-<td align="left" width="100%" style="padding:0;Margin:0;width:352px;padding-top:15px;">
+<td align="left" style="padding:0;Margin:0;width:352px;padding-top:0px;">
 <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tr>
-<td width="100%" align="center" style="padding:0;Margin:0;font-size:0px;"> <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/1ban.png" alt="CroodsSitting" style="display:block;border:0;outline:none;width:auto;text-decoration:none;-ms-interpolation-mode:bicubic">
+<td align="center" style="padding:0;Margin:0;font-size:0px; padding-right: 0px;">
+<img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/1ban.png" alt="CroodsSitting" width="100%" height="286" style="display: block; border-radius: 15px;">
 </td>
 </tr>
 </table>
@@ -147,31 +150,6 @@ web-разработке?</b></h2>
 </tr>
 </table>
 <!--[if mso]></td></tr></table><![endif]-->
-</td>
-</tr>
-</table>
-<!--Шапка с текстом и картинкой справа  БЛОК С КАРТИНКОЙ ДЛЯ АДАПТАЦИИ -->
-<table bgcolor="#ffffff" align="center" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;">
-<tr>
-<td align="left" bgcolor="#FF4B33" class="content-left" style="padding:0;Margin:0;background-color:#FFFFFF; border-radius: 15px;">
-<!--[if mso]><table style="width:600px" cellpadding="0" cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
-<tr>
-<td align="center" style="padding:0;Margin:0;width:298px; ">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
-<!-- Кнопка -->
-<tr>
-<td width="100%" align="center" style="padding:0;Margin:0;font-size:0px;"> <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/1ban.png" alt="CroodsSitting" style="display:block;border:0;outline:none;width:auto;text-decoration:none;-ms-interpolation-mode:bicubic">
-</td>
-</tr>
-</table>
-</td>
-</tr>
-</table>
-</td align="left" bgcolor="#FFFFFF" width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
-<!--[if mso]></td></tr></table><![endif]-->
-<td align="left" bgcolor="#FFFFFF" width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
-<!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
 </td>
 </tr>
 </table>
@@ -181,10 +159,10 @@ web-разработке?</b></h2>
 <!--Текст с рассказом "о нас"-->
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
 <tr>
-<td>
+<td style="padding-top: 0px; padding-bottom: 0px; ">
 <table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt; border-spacing:0px; background-color:#0C379B; width:600px;">
 <tr>
-<td>
+<td style="padding-top: 0px; padding-bottom: 40px; ">
 <table align="center" width="100%" cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td align="left" style="padding:0;Margin:0;padding-top:40px; padding-left:16px;padding-right:16px; color:#FFFFFF">
@@ -194,12 +172,6 @@ web-разработке?</b></h2>
 специалиста. Все вопросы Вы сможете задать спикеру <br>
 на вебинаре :)
 </p>
-</td>
-</tr>
-</table>
-</td>
-</tr>
-</table>
 </td>
 </tr>
 </table>
@@ -234,7 +206,7 @@ web-разработке?</b></h2>
 </td>
 </tr>
 </table>
-<table cellpadding="0" cellspacing="0" border="0" width="600" align="center" bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 40px; padding-right: 0px;">
+<table cellpadding="0" cellspacing="0" border="0" width="600" align="center" bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
 <tr>
 <td class="mobile-content-p0" width="30" align="left" align="top" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 16px;">
 <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/1-invitation/img/Rectangle19.png" alt="Как устроиться в компанию после обучения?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
@@ -245,13 +217,16 @@ web-разработке?</b></h2>
 </td>
 </tr>
 </table>
+</td>
+</tr>
+</table>
 <!--Ведущий вебинара-->
-<table cellpadding="0" cellspacing="0" border="0" width="600" align="center" bgcolor="#FFFFFF" style="padding-top: 40px; padding-bottom: 0px; padding-right: 0px;">
+<table cellpadding="0" cellspacing="0" border="0" width="600" align="center" bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
 <tr>
 <td align="center" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
 <table ellpadding="0" cellspacing="0" border="0" width="100%" align="center" bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
 <tr>
-<td width="100%" align="center" align="top" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+<td width="100%" align="center" align="top" style="padding-top: 40px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:24px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#141414;">
 <b>Ведущий вебинара</b></p>
 </td>
