--- a/3-promo/index.min.html
+++ b/3-promo/index.min.html
@@ -21,7 +21,7 @@
 </o:OfficeDocumentSettings>
 </xml>
 <![endif]-->
-<style type="text/css">@media only screen and (max-width:600px){h2{font-size:22px!important;line-height:120%!important}.content table,.content{width:100%!important;max-width:600px!important}.mobile-content-p0{padding:0!important}.mobile-content-p0r{padding-right:0!important}.mobile-content-p0b{padding-bottom:0!important}.mobile-content-p0n{width:100%!important;padding-right:30px!important}.mobile-content-p0с{padding-left:16px!important}.mobile-content-pF{padding-left:16px!important;padding-right:16px!important}.mobile-content-p0i{width:100%!important;padding-bottom:40px!important}.mobile-content-p0d{width:100%!important;padding-left:18px!important;padding-top:28px!important}.mobile-content-p0m{padding-right:16px!important;padding-bottom:24px!important}.mobile-content-p0e{width:auto!important;padding-left:16px!important;padding-right:16px!important;border-radius:15px 15px 0 0!important}.mobile-content-p0t{width:100%!important;padding-left:16px!important;padding-right:0!important}.mobile-content-gp16{width:100%!important;padding-left:0!important;padding-right:0!important}.mobile-content-p0to{padding-top:37px!important}.mobile-content-p0j{padding-right:16px!important}.mobile-content-p0v{width:auto!important;padding-right:16px!important;padding-left:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0o{width:auto!important;padding-right:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0l{width:auto!important;padding-right:16px!important;padding-left:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0u{width:auto!important;padding-right:0!important;padding-left:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0preim{width:auto!important;display:inline-block!important}table.not-adaptive{width:auto!important}table.social{display:inline-block!important}table.social td{display:inline-block!important}.mobile-content-center{text-align:center!important}.mobile-content-center img{display:inline!important}.mobile-100{width:100%!important}.button-border{display:block!important}a.button{font-size:20px!important;display:block!important;border-width:10px 0 10px 0!important}.adaptive-img{width:284px!important;height:284px!important}.content-left,.content-right{width:100%!important}.content table,.content{width:100%!important;max-width:600px!important}}.adaptive-img{width:100%!important;height:auto!important}#outlook a{padding:0}</style>
+<style type="text/css">@media only screen and (max-width:600px){h2{font-size:22px!important;line-height:120%!important}.content table,.content{width:100%!important;max-width:600px!important}.mobile-content-p0{padding:0!important}.mobile-content-p0r{padding-right:0!important}.mobile-content-p0b{padding-bottom:0!important}.mobile-content-p0n{width:100%!important;padding-right:30px!important}.mobile-content-p0с{padding-left:16px!important}.mobile-content-pF{padding-left:16px!important;padding-right:16px!important}.mobile-content-p0i{width:100%!important;padding-bottom:40px!important}.mobile-content-p0d{width:100%!important;padding-left:18px!important;padding-top:28px!important}.mobile-content-p0m{padding-right:16px!important;padding-bottom:24px!important}.mobile-content-p0e{width:auto!important;padding-left:16px!important;padding-right:16px!important;border-radius:15px 15px 0 0!important}.mobile-content-p0pp{width:auto!important;border-radius:15px 15px 0 0!important}.mobile-content-p0t{width:100%!important;padding-left:16px!important;padding-right:0!important}.mobile-content-gp16{width:100%!important;padding-left:0!important;padding-right:0!important}.mobile-content-p0to{padding-top:37px!important}.mobile-content-p0j{padding-right:16px!important}.mobile-content-p0v{width:auto!important;padding-right:16px!important;padding-left:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0o{width:auto!important;padding-right:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0l{width:auto!important;padding-right:16px!important;padding-left:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0u{width:auto!important;padding-right:0!important;padding-left:16px!important;text-align:center!important;display:inline-block!important}.mobile-content-p0preim{width:auto!important;display:inline-block!important}table.not-adaptive{width:auto!important}table.social{display:inline-block!important}table.social td{display:inline-block!important}.mobile-content-center{text-align:center!important}.mobile-content-center img{display:inline!important}.mobile-100{width:100%!important}.button-border{display:block!important}a.button{font-size:20px!important;display:block!important;border-width:10px 0 10px 0!important}.adaptive-img{width:284px!important;height:284px!important}.content-left,.content-right{width:100%!important}.content table,.content{width:100%!important;max-width:600px!important}}.adaptive-img{width:100%!important;height:auto!important}#outlook a{padding:0}</style>
 </head>
 <body style="width:100%;padding:0;Margin:0;font-family:'trebuchet ms', tahoma, sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
 <div style="background-color:#F6F6F6;">
@@ -83,8 +83,6 @@
 </tr>
 </table>
 </td>
-</tr>
-</table>
 <!--[if mso]></td></tr></table><![endif]-->
 <table cellpadding="0" cellspacing="0" class="mobile-content-p0r mobile-content-p20b" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tr>
@@ -106,17 +104,17 @@
 </td>
 </tr>
 </table>
-<!--Шапка с текстом и картинкой справа-->
-<table class="mobile-content-p0e" bgcolor="#f6f6f6" align="center" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#f6f6f6;width:600px; padding-left: 0px; padding-right: 0px;">
+<!--Благодарим за регистрацию-->
+<table class="mobile-content-p0e" bgcolor="#f6f6f6" align="center" cellpadding="0" cellspacing="0" width="600" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#f6f6f6;width:600px; padding-left: 0px; padding-right: 0px; ">
 <tr>
-<td class="mobile-content-p0e mobile-100" align="left" bgcolor="#FF4B33" class="content-left" style="padding:0;Margin:0;background-color:#FF4B33; border-radius: 15px 0px 0px 0px; padding-right:0px; ">
+<td class=" mobile-content-p0pp mobile-100" align="left" bgcolor="#FF4B33" class="content-left" style="padding:0;Margin:0;background-color:#FF4B33; border-radius: 15px 0px 0px 0px; padding-right:0px; ">
 <!--[if mso]><table style="width:600px" cellpadding="0" cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
 <table cellpadding="0" cellspacing="0" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
 <tr>
 <td align="center" style="padding:0;Margin:0;width:284px; ">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
+<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;  ">
 <tr>
-<td class="content-body mobile-100" align="center" style="Margin:0;padding-bottom:0px;padding-left:0px;padding-right:0px;padding-top:16px;">
+<td class="content-body mobile-100" align="center" style="Margin:0;padding-bottom:0px;padding-left:0px;padding-right:0px;padding-top:16px; ">
 <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
 <tr>
 <td align="left" style="padding:0;Margin:0;padding-top:32px; padding-left:32px; color:#FFFFFF">
@@ -138,9 +136,9 @@
 </td>
 </tr>
 </table>
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;padding-bottom:31px; ">
+<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;padding-bottom:0px; ">
 <tr>
-<td align="center" style="padding:0;Margin:0;padding-top:0px; padding-left:0px; color:#FFFFFF; ">
+<td align="left" style="padding:0;Margin:0;padding-top:0px; padding-left:32px; color:#FFFFFF; ">
 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:56px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:67.59px;color:#FFFFFF;"><span><b>20%</b></span></p>
 </td>
 <td align="left" style="padding:0;Margin:0;padding-top:0px; padding-left:0px; color:#FFFFFF;">
@@ -154,16 +152,14 @@
 </td>
 </tr>
 </table>
-</td>
-<!--[if mso]></td></tr></table><![endif]-->
-<td align="left" bgcolor="#FFFFFF" width="284" class="content-right">
 <!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
 <table cellpadding="0" cellspacing="0" width="100%" align="right" class="content-right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;width:auto;">
 <tr>
-<td align="left" width="100%" style="padding:0;Margin:0;width:284px;padding-top:15px;">
+<td align="left" width="100%" style="padding:0;Margin:0;width:284px;padding-top:0px;background-color:#FFFFFF;">
 <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tr>
-<td width="100%" align="center" style="padding:0;Margin:0;font-size:0px;"> <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/3-promo/img/CroodsPartyTime.png" alt="CroodsPartyTime" width="284" height="271" title="Croods Sitting" style="display:block;border:0;outline:none;width:auto;text-decoration:none;-ms-interpolation-mode:bicubic">
+<td width="100%" align="center" style="padding:0;Margin:0;font-size:0px;background-color:#FFFFFF;">
+<img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/3-promo/img/CroodsPartyTime.png" alt="CroodsPartyTime" width="284" height="271" title="Croods Sitting" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
 </td>
 </tr>
 </table>
@@ -171,31 +167,6 @@
 </tr>
 </table>
 <!--[if mso]></td></tr></table><![endif]-->
-</td>
-</tr>
-</table>
-<!--Шапка с текстом и картинкой справа  БЛОК С КАРТИНКОЙ ДЛЯ АДАПТАЦИИ -->
-<table class="mobile-content-p0l" bgcolor="#F6F6F6" align="center" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#F6F6F6;width:284px; ">
-<tr>
-<td align="left" bgcolor="#F6F6F6" class="content-left" style="padding:0;Margin:0;background-color:#FFFFFF;  ">
-<!--[if mso]><table style="width:600px" cellpadding="0" cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
-<tr>
-<td align="center" style="padding:0;Margin:0;width:284px; ">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; ">
-<!-- Кнопка -->
-<tr>
-<td class="adaptive-img" width="284" align="center" style="padding:0;Margin:0;font-size:0px; "> <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/3-promo/img/CroodsPartyTime.png" alt="CroodsPartyTime" width="284" height="271" title="Croods Sitting" style="display:block;border:0;outline:none;width:auto;text-decoration:none;-ms-interpolation-mode:bicubic">
-</td>
-</tr>
-</table>
-</td>
-</tr>
-</table>
-</td align="left" bgcolor="#FFFFFF" width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
-<!--[if mso]></td></tr></table><![endif]-->
-<td align="left" bgcolor="#FFFFFF" width="100%" class="content-right" style="padding:0;Margin:0;background-color:#FFFFFF;">
-<!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
 </td>
 </tr>
 </table>
@@ -468,10 +439,10 @@
 <tr>
 <td align="left" style="padding:0;Margin:0;width:180px; padding-left: 16px; padding-right: 16px;">
 <!--Новая таблица-->
-<table bgcolor="#F6F6F6" width="100%" cellspacing="0" cellpadding="0" border="0">
+<table width="100%" cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td>
-<table bgcolor="#F6F6F6" class="content-body mobile-100" width="100%" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 15px 15px 0px 0px;">
+<table bgcolor="#ffffff" class="content-body " align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 15px 15px 0px 0px;">
 <tr>
 <td align="center" style="padding:0;Margin:0;padding-bottom:48px; padding-top:32px; color: #13D6C3; ">
 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:24px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:28px;color:#141414;"><b>Популярные курсы</b></p>
@@ -479,13 +450,13 @@
 </tr>
 <tbody>
 <tr>
-<td align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:0px;padding-right:0px;">
+<td width="100%" align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:0px;padding-right:0px; ">
 <!--[if mso]><table style="width:540px;" cellpadding="0" cellspacing="0"><tr><td style="width:260px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" class="content-body mobile-content-p0n " align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+<table cellpadding="0" cellspacing="0" class="content-body " align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tbody>
 <tr>
-<td align="left" style="padding:0;Margin:0;width:180px; padding-left: 32px;">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<td align="center" style="padding:0;Margin:0;width:200px; ">
+<table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tbody>
 <tr>
 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -497,7 +468,6 @@
 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:13px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:15px;color:#141414;"><b>Специалист<br>
 по кибербезопасности </b> </p>
 </td>
-</tr>
 </tbody>
 </table>
 <!-- Кнопка -->
@@ -513,11 +483,11 @@
 </tbody>
 </table>
 <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" class="content-body mobile-100" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+<table cellpadding="0" cellspacing="0" class="content-body " align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tbody>
 <tr>
-<td align="left" style="padding:0;Margin:0;width:180px;">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<td align="center" style="padding:0;Margin:0;width:200px;">
+<table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tbody>
 <tr>
 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -546,11 +516,11 @@ Scientist: анализ<br>
 </tbody>
 </table>
 <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" class="content-body mobile-100" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+<table cellpadding="0" cellspacing="0" class="content-body" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tbody>
 <tr>
-<td align="left" style="padding:0;Margin:0;width:180px;">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<td align="center" style="padding:0;Margin:0;width:200px; padding-right: 0px;">
+<table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tbody>
 <tr>
 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -604,6 +574,9 @@ Scientist: анализ<br>
 </tr>
 </table>
 </td>
+</tr>
+</table>
+<tr>
 </tr>
 </table>
 <!--[if mso]></td></tr></table><![endif]-->
