--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -221,7 +221,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             <table align="center" width="600" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td>
-                  <table bgcolor="#ffffff" class="mobile-100" align="center" cellpadding="0" cellspacing="0"
+                  <table bgcolor="#ffffff"  align="center" cellpadding="0" cellspacing="0"
                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
                     <tr>
                       <td  align="center" style="Margin:0;padding-top:33px;padding-bottom:33px;padding-left:25px;padding-right:25px;font-size:0px; width:100%;">
@@ -360,7 +360,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                     <tr>
                       <td align="center" valign="top" style="padding:0;Margin:0;width:550px;">
-                        <table bgcolor="#ffffff" class="content-body mobile-100 " cellpadding="0" cellspacing="0" width="100%" 
+                        <table bgcolor="#ffffff" class="content-body" cellpadding="0" cellspacing="0" width="100%" 
                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
                             <td align="center"  style="padding:0;Margin:0;padding-bottom:24px; color: #FF4B33;">
@@ -412,23 +412,24 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <td>
                   <!--Новая таблица-->
                   <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                    <tr>
-                      <td>
-                        <table bgcolor="#ffffff" class="content-body mobile-100 " align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 0px 0px;">
+              <tr>
+                <td align="left" bgcolor="#F6F6F6"
+                      style="Margin:0;padding-top:0px;padding-bottom:0px;background-color:#F6F6F6;">
+                      <table bgcolor="#ffffff" class="content-body mobile-100 " align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 0px 0px;">
                           <tr>
-                            <td align="center" style="padding:0;Margin:0;padding-bottom:24px; padding-top:32px; color: #13D6C3;">
+                            <td align="center" style="padding:0;Margin:0;padding-bottom:24px; padding-top:32px; color: #13D6C3; ">
                               <h3 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:30px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:35px;color:#13D6C3;"><b>Ведущие курса</b></h3>
                             </td>
                           </tr>
                         <tbody>
                       <tr>
-                        <td align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:0px;padding-right:0px;">
+                        <td width="550" align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:0px;padding-right:0px; ">
                         <!--[if mso]><table style="width:540px;" cellpadding="0" cellspacing="0"><tr><td style="width:260px;" valign="top"><![endif]-->
-                      <table cellpadding="0" cellspacing="0" class="content-body mobile-content-p0n " align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+                      <table  cellpadding="0" cellspacing="0" class="content-body " align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
                         <tbody>
                           <tr>
-                          <td align="left" style="padding:0;Margin:0;width:180px; padding-left: 32px;">
-                            <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                          <td align="center" style="padding:0;Margin:0;width:200px; ">
+                            <table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -449,11 +450,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         </tbody>
                       </table>
                       <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
-                        <table cellpadding="0" cellspacing="0"  class="content-body mobile-100" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+                        <table  cellpadding="0" cellspacing="0"  class="content-body " align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
                         <tbody>
                           <tr>
-                          <td align="left" style="padding:0;Margin:0;width:180px;">
-                            <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                          <td align="center" style="padding:0;Margin:0;width:200px;">
+                            <table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -474,11 +475,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         </tbody>
                       </table>
                       <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
-                        <table cellpadding="0" cellspacing="0"  class="content-body mobile-100" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+                        <table  cellpadding="0" cellspacing="0"  class="content-body" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
                         <tbody>
                           <tr>
-                          <td align="left" style="padding:0;Margin:0;width:180px; padding-right: 0px;">
-                            <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                          <td align="center" style="padding:0;Margin:0;width:200px; padding-right: 0px;">
+                            <table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -498,12 +499,16 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           </tr>
                         </tbody>
                       </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
                       <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
                     <table cellpadding="0" cellspacing="0" width="100%"
                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                     <tr>
                       <td align="center" valign="top" style="padding:0;Margin:0;width:550px;">
-                        <table bgcolor="#ffffff" class="content-body mobile-100" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 15px 15px;">
+                        <table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 15px 15px;">
                           <tr>
                             <td align="left" style="padding:0;Margin:0;padding-bottom:38px; padding-top:30px; color: #141414; padding-right: 32px; padding-left: 32px;">
                               <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#141414;">Пока вы ждёте начала курса, вам могут быть интересны вебинары на разные темы, которые проходят на платформе ежедневно.</p>
@@ -553,11 +558,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                         <tr>
                                           <td align="center" bgcolor="#ffffff"
                                             width="560"
-                                            style="padding-top: 20px; padding-bottom: 0px; border-radius: 15px;  padding-right: 16px; border: 1px solid #02BAD3">
+                                            style="padding-top: 20px; padding-bottom: 24px; border-radius: 15px;  padding-right: 16px; border: 1px solid #02BAD3">
                                             <table cellpadding="0"
                                               cellspacing="0" border="0"
                                               width="560" align="center"
-                                              style="padding-top: 0px; padding-bottom: 24px;">
+                                              style="padding-top: 0px; padding-bottom: 0px;">
                                               <!-- Заголовок  -->
                                               <tr>
                                                 <td align="left"
@@ -625,12 +630,12 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                         <tr>
                                           <td align="center" bgcolor="#ffffff"
                                             width="560"
-                                            style="padding-top: 16px; padding-bottom: 0px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
+                                            style="padding-top: 16px; padding-bottom: 24px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
                                             <table cellpadding="0"
                                               cellspacing="0" border="0"
                                               width="560" align="center"
                                               bgcolor=""
-                                              style="padding-top: 0px; padding-bottom: 24px;">
+                                              style="padding-top: 0px; padding-bottom: 0px;">
                                               <!-- Заголовок -->
                                               <tr>
                                                 <td align="left"
@@ -696,11 +701,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                         <tr>
                                           <td align="center" bgcolor="#ffffff"
                                             width="560"
-                                            style="padding-top: 16px; padding-bottom: 0px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
+                                            style="padding-top: 16px; padding-bottom: 24px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
                                             <table cellpadding="0"
                                               cellspacing="0" border="0"
                                               width="560" align="center"
-                                              style="padding-top: 0px; padding-bottom: 24px;">
+                                              style="padding-top: 0px; padding-bottom: 0px;">
                                               <!-- Заголовок-->
                                               <tr>
                                                 <td align="left"
@@ -752,7 +757,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                              <!-- таблица -->
                             <!-- Кнопка -->
                             <tr>
-                              <td align="center" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;">
+                              <td align="center" style="Margin:0;padding-bottom:0px;padding-left:35px;padding-right:37px;padding-top:px;">
                                       <span  width="100%" style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
                                         <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:176px;text-align:center;">Все мероприятия</a>
                                       </span>
