--- a/2-welcome/index.min.html
+++ b/2-welcome/index.min.html
@@ -39,7 +39,7 @@
 <table align="center" width="600" cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td>
-<table bgcolor="#ffffff" class="mobile-100" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
+<table bgcolor="#ffffff" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
 <tr>
 <td align="center" style="Margin:0;padding-top:33px;padding-bottom:33px;padding-left:25px;padding-right:25px;font-size:0px; width:100%;">
 <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/logo1.png" alt="Лого" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
@@ -159,7 +159,7 @@
 <table bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tr>
 <td align="center" valign="top" style="padding:0;Margin:0;width:550px;">
-<table bgcolor="#ffffff" class="content-body mobile-100 " cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<table bgcolor="#ffffff" class="content-body" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tr>
 <td align="center" style="padding:0;Margin:0;padding-bottom:24px; color: #FF4B33;">
 <h2 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:30px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:35px;color:#FF4B33;"><b>Что вас ждёт на курсе</b></h2>
@@ -209,22 +209,22 @@
 <!--Новая таблица-->
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
 <tr>
-<td>
+<td align="left" bgcolor="#F6F6F6" style="Margin:0;padding-top:0px;padding-bottom:0px;background-color:#F6F6F6;">
 <table bgcolor="#ffffff" class="content-body mobile-100 " align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 0px 0px;">
 <tr>
-<td align="center" style="padding:0;Margin:0;padding-bottom:24px; padding-top:32px; color: #13D6C3;">
+<td align="center" style="padding:0;Margin:0;padding-bottom:24px; padding-top:32px; color: #13D6C3; ">
 <h3 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:30px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:35px;color:#13D6C3;"><b>Ведущие курса</b></h3>
 </td>
 </tr>
 <tbody>
 <tr>
-<td align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:0px;padding-right:0px;">
+<td width="550" align="center" style="padding:0;Margin:0;padding-top:0px;padding-left:0px;padding-right:0px; ">
 <!--[if mso]><table style="width:540px;" cellpadding="0" cellspacing="0"><tr><td style="width:260px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" class="content-body mobile-content-p0n " align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+<table cellpadding="0" cellspacing="0" class="content-body " align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tbody>
 <tr>
-<td align="left" style="padding:0;Margin:0;width:180px; padding-left: 32px;">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<td align="center" style="padding:0;Margin:0;width:200px; ">
+<table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tbody>
 <tr>
 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -245,11 +245,11 @@ Development</p>
 </tbody>
 </table>
 <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" class="content-body mobile-100" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+<table cellpadding="0" cellspacing="0" class="content-body " align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tbody>
 <tr>
-<td align="left" style="padding:0;Margin:0;width:180px;">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<td align="center" style="padding:0;Margin:0;width:200px;">
+<table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tbody>
 <tr>
 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -270,11 +270,11 @@ Software</p>
 </tbody>
 </table>
 <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
-<table cellpadding="0" cellspacing="0" class="content-body mobile-100" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
+<table cellpadding="0" cellspacing="0" class="content-body" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
 <tbody>
 <tr>
-<td align="left" style="padding:0;Margin:0;width:180px; padding-right: 0px;">
-<table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+<td align="center" style="padding:0;Margin:0;width:200px; padding-right: 0px;">
+<table width="100%" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tbody>
 <tr>
 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
@@ -294,11 +294,15 @@ Software</p>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
 <!--[if mso]></td><td style="width:20px;"></td><td style="width:260px;" valign="top"><![endif]-->
 <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
 <tr>
 <td align="center" valign="top" style="padding:0;Margin:0;width:550px;">
-<table bgcolor="#ffffff" class="content-body mobile-100" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 15px 15px;">
+<table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;border-radius: 0px 0px 15px 15px;">
 <tr>
 <td align="left" style="padding:0;Margin:0;padding-bottom:38px; padding-top:30px; color: #141414; padding-right: 32px; padding-left: 32px;">
 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#141414;">Пока вы ждёте начала курса, вам могут быть интересны вебинары на разные темы, которые проходят на платформе ежедневно.</p>
@@ -335,8 +339,8 @@ Software</p>
 <td style="padding-bottom: 0px; ">
 <table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 0px;">
 <tr>
-<td align="center" bgcolor="#ffffff" width="560" style="padding-top: 20px; padding-bottom: 0px; border-radius: 15px;  padding-right: 16px; border: 1px solid #02BAD3">
-<table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 24px;">
+<td align="center" bgcolor="#ffffff" width="560" style="padding-top: 20px; padding-bottom: 24px; border-radius: 15px;  padding-right: 16px; border: 1px solid #02BAD3">
+<table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 0px;">
 <!-- Заголовок  -->
 <tr>
 <td align="left" style="padding-top: 10px; padding-bottom: 10px; padding-right: 18px; padding-left: 18px;">
@@ -387,8 +391,8 @@ Software</p>
 <td style="padding-bottom: 0px;">
 <table cellpadding="0" cellspacing="0" border="0" width="560" align="center" bgcolor="" style="padding-top: 0px; padding-bottom: 0px;">
 <tr>
-<td align="center" bgcolor="#ffffff" width="560" style="padding-top: 16px; padding-bottom: 0px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
-<table cellpadding="0" cellspacing="0" border="0" width="560" align="center" bgcolor="" style="padding-top: 0px; padding-bottom: 24px;">
+<td align="center" bgcolor="#ffffff" width="560" style="padding-top: 16px; padding-bottom: 24px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
+<table cellpadding="0" cellspacing="0" border="0" width="560" align="center" bgcolor="" style="padding-top: 0px; padding-bottom: 0px;">
 <!-- Заголовок -->
 <tr>
 <td align="left" style="padding-top: 10px; padding-bottom: 10px; padding-right: 18px; padding-left: 18px;">
@@ -438,8 +442,8 @@ Figma vs Photoshop
 <td style="padding-bottom: 0px;">
 <table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 0px; ">
 <tr>
-<td align="center" bgcolor="#ffffff" width="560" style="padding-top: 16px; padding-bottom: 0px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
-<table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 24px;">
+<td align="center" bgcolor="#ffffff" width="560" style="padding-top: 16px; padding-bottom: 24px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
+<table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 0px;">
 <!-- Заголовок-->
 <tr>
 <td align="left" style="padding-top: 10px; padding-bottom: 10px; padding-right: 18px; padding-left: 18px;">
@@ -481,7 +485,7 @@ Figma vs Photoshop
 <!-- таблица -->
 <!-- Кнопка -->
 <tr>
-<td align="center" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:px;">
+<td align="center" style="Margin:0;padding-bottom:0px;padding-left:35px;padding-right:37px;padding-top:px;">
 <span width="100%" style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
 <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:176px;text-align:center;">Все мероприятия</a>
 </span>
