--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -407,7 +407,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
             <!--Ведущие курса-->
-            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <table width="600" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td>
                   <!--Новая таблица-->
