--- a/2-welcome/index.min.html
+++ b/2-welcome/index.min.html
@@ -203,7 +203,7 @@
 </tr>
 </table>
 <!--Ведущие курса-->
-<table width="100%" cellspacing="0" cellpadding="0" border="0">
+<table width="600" cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td>
 <!--Новая таблица-->
